<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/allow_persisting_data"
            android:id="@+id/textView11"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/characters_text"
            android:id="@+id/textView4"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClickChangeCharactersButton" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/change_length"
            android:id="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClickChangeRoundsButton"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/change_hash"
            android:id="@+id/textView6"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/android_watch_text"
            android:id="@+id/textView8"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/notes_text"
            android:id="@+id/textView7"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/donate_text"
            android:id="@+id/textView10"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_text"
            android:id="@+id/textView9"
            android:layout_marginLeft="10dp"
            android:textSize="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

    </LinearLayout>


</LinearLayout>