<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forfun.wdh.passwordapp.view.InputScreen"
    android:weightSum="20"
    android:gravity="top">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollHorizontally="true"
        android:id="@+id/generatedText"
        android:gravity="center|top"
        android:textIsSelectable="true"
        android:typeface="monospace"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_weight="19"
        android:letterSpacing=".5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phrase"
            android:id="@+id/textView"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout3"
            android:weightSum="9">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passphraseBox"
                android:singleLine="true"
                android:layout_weight="8"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_button"
                android:id="@+id/activatebutton"
                android:clickable="false"
                android:onClick="onClickActivateButton"
                android:background="@android:color/holo_green_dark"
                android:layout_gravity="right"
                android:layout_weight="1"/>
                </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:id="@+id/linearLayout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:id="@+id/settings"
            android:onClick="onClickOptionsButton"
            android:background="@android:color/holo_blue_light"
            android:singleLine="false" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input_password"
            android:id="@+id/pass"
            android:onClick="onClickChangePasswordView"
            android:background="@android:color/holo_blue_light"
            android:singleLine="false"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_salt"
            android:id="@+id/selectsaltbutton"
            android:onClick="onClickSelectSaltButton"
            android:background="@android:color/holo_blue_light"
            android:singleLine="false" />
    </LinearLayout>
</LinearLayout>
