<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PasswordChange"
        android:id="@+id/textView2"
        android:layout_gravity="left|top"
        android:textSize="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"  />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/passwordBox"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:id="@+id/linearLayout4">

        <Space
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="3"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Set"
            android:id="@+id/button"
            android:background="@android:color/holo_blue_light"
            android:onClick="onClickChangePassword"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/button2"
            android:background="@android:color/holo_blue_light"
            android:layout_gravity="bottom|right"
            android:onClick="onClickCancel"
            android:layout_marginBottom="10dp" />
        </LinearLayout>

</LinearLayout>